對創建交易加入nonce判別

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 APP_PROVIDER=<provider_url>
 # 私鑰。 發起人用的簽名私鑰
 APP_SIGNER=<signer_key>
+# 私鑰。 第二個人的簽名私鑰
+APP_SIGNER_2=<signer_key>
 # 多簽錢包合約地址
 APP_SAFE_ADDRESS=<safe_address>
 # 調用類型
@@ -14,3 +16,5 @@ APP_TRANSFER_AMOUNT=<transfer_amount>
 APP_TRANSFER_DECIMAL=<transfer_decimal>
 # 轉到哪一個外部錢包
 APP_DESTINATION=<destination_address>
+# 自訂義nonce序列號
+APP_NONCE=<nonce>
