上鏈，目前的nonce是根據自定義的數字，所以網頁自己測試的時候要確保env裡的註解有達成，但給手機端呼叫沒這問題。

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,5 @@ APP_TRANSFER_AMOUNT=<transfer_amount>
 APP_TRANSFER_DECIMAL=<transfer_decimal>
 # 轉到哪一個外部錢包
 APP_DESTINATION=<destination_address>
-# 自訂義nonce序列號
+# 自訂義nonce序列號，如果上鏈失敗有可能是設定的nonce數小於實際當前nonce數
 APP_NONCE=<nonce>
